--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,14 +12,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "ui": "workspace:*"
+    "ui": "workspace:*",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxt/ui": "2.21.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@pinia/nuxt": "0.9.0",
     "eslint": "^8.57.0",
     "eslint-config-custom": "workspace:*",
     "nuxt": "^3.10.3",
+    "pinia": "^2.3.0",
     "tsconfig": "workspace:*",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
