--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "ui": "workspace:*",
+    "@vueuse/core": "^12.5.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -20,6 +20,7 @@
     "@nuxt/ui": "2.21.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@pinia/nuxt": "0.9.0",
+    "@vueuse/nuxt": "12.5.0",
     "eslint": "^8.57.0",
     "eslint-config-custom": "workspace:*",
     "nuxt": "^3.10.3",
