--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "@nuxt/devtools": "latest",
     "@nuxt/ui": "2.21.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@nuxtjs/i18n": "9.1.5",
     "@pinia/nuxt": "0.9.0",
     "@vueuse/nuxt": "12.5.0",
     "eslint": "^8.57.0",
